# dexfans

./: .gitignore  Cargo.toml  dfx.json  next.config.mjs  package-lock.json  package.json
backend/canisters/user/: Cargo.toml  can.did
backend/canisters/user/src/: lib.rs
src/app/: globals.css  layout.tsx
src/app/(root)/: layout.tsx  page.tsx
src/components/common/: avatar.tsx  editor.tsx  loader.tsx  post-button.tsx  post.tsx
src/components/layout/actions/: index.tsx  search.tsx  upgrade.tsx
src/components/layout/actions/subscribe/: index.tsx  item.tsx
src/components/layout/actions/trend/: index.tsx  item.tsx  more-button.tsx
src/components/layout/mobile/: post-button.tsx  user-button.tsx
src/components/layout/mobile-sidebar/: index.tsx
src/components/layout/sidebar/: index.tsx  item.tsx  logo.tsx  post-button.tsx  user-button.tsx
src/components/main/: post-list.tsx
src/components/providers/: auth.tsx  index.tsx
src/components/ui/: button.tsx  hint.tsx
src/lib/: constants.ts  types.ts  utils.ts
