[workspace]
members = [
    "backend/canisters/user",
    "backend/libraries/types",
    "backend/libraries/utils",
]
resolver = "2"

[workspace.dependencies]
candid = "0.10.10"
ic0 = "0.23.0"
ic-cdk = "0.15.0"
ic-cdk-timers = "0.9.0"
ic-cdk-macros = "0.15.0"
ic-stable-structures = "0.6.5"
rand = "0.8.5"
rmp-serde = "1.3.0"
serde = "1.0.204"
time = "0.3.36"
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-subscriber = "0.3.18"
